# libngf

./: .gitignore  Makefile.am  configure.ac  coverage.sh  libngf-1.0.pc.in  libngf.changes  libngf.spec  libngf0.pc.in
debian/: api
doc/: doxygen.cfg
doc/src/: mainpage.dox
examples/: Makefile.am  dummy-server.py  ngf-client.c
libngf/: Makefile.am  client.c  client.h  list_p.h  ngf.h  proplist.c  proplist.h
rpm/: libngf.changes  libngf.spec  libngf.yaml
tests/: Makefile.am  test-client.c  test-proplist.c  tests.xml
